# microgradCpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  converted_data.csv  current_test.cpp  d1.csv  easy.cpp  easy_adam.cpp  easy_df.cpp  easy_df_adam.cpp  get_iris2.csv  gtest_readme.md  main.cpp  main_csv.cpp  main_csv2.cpp  main_df.cpp  output.csv  t2_encoding.cpp  test1.csv  test3.cpp  test4.cpp  test_output
.github/workflows/: package.yaml
data/: iris2.csv
include/: adam.hpp  adam.py  column.hpp  console_utils.hpp  csv.hpp  csv_table.hpp  data_utils.hpp  dataframe.hpp  dataframe22.hpp  dataframe_extended.hpp  dataframe_utils.hpp  dataprocessor.hpp  datasetType.hpp  easy.hpp  exceptions.hpp  header.hpp  iris.hpp  linear.hpp  loss.hpp  micrograd.hpp  mlp.hpp  range.hpp  schema.hpp  series.hpp  sgd.hpp  sp_functional.hpp  sp_testing_utils.hpp  tensor_basic.hpp  train_eval.hpp  types.hpp  value.hpp
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
test_output.dSYM/Contents/Resources/Relocations/aarch64/: test_output.yml
tests/: main_csv.cpp  main_no_cache.cpp  main_table.cpp  t2_encoding.cpp  t_encoding.cpp  test_A.cpp  test_arithmetic.cpp  test_cross_ent.cpp  test_csv.cpp  test_dataframe.cpp  test_df_slice.cpp  test_encoding  test_iris.cpp  test_iris_load.cpp  test_main.cpp  test_range.cpp  test_sgd.cpp  test_softmax.cpp  test_table.cpp  test_value.cpp  test_weights.cpp
tests/wintests/: simple.h  simple2.h  simpletest.cpp  test5.cpp  test_main.cpp  test_softmax.cpp
